...
            android:fontFamily="@font/lato"
            android:text="@string/first_name_qry"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userFirstName"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/hint_first_name"
            android:inputType="text"
            android:background="@color/white"
...
            android:fontFamily="@font/lato"
            android:text="@string/last_name"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userLastName"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/last_name"
            android:inputType="text"
            android:background="@color/white"
...
            android:text="@string/height"
            android:layout_marginEnd="20sp"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userHeightFt"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/default_zero"
            android:inputType="number"
            android:background="@color/white"
...
            android:layout_marginStart="10sp"
            android:text="@string/feet_text"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userHeightInch"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/default_zero"
            android:inputType="number"
            android:background="@color/white"
...
            android:textColor="@color/colorText"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/getStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_check_white_24dp"
        android:drawablePadding="5dp"
...
