...
        android:title="" />

    <item android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="" />

    <item android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="" />

    <item android:id="@+id/navigation_team"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="" />

</menu>
